# MultiAgent-ResearchIQ

./: .env.example  .gitignore  AI_research_report_agent_plan.md  README.md  pyproject.toml
data/sample_docs/: README.md  manifest.json
docs/: ResearchIQ_System_Design.docx  build_project_running.md
scripts/: download_seed_docs.py  query_knowledge_base.py  run_coordinator.py  run_research.py  seed_knowledge_base.py
src/agents/: __init__.py  coordinator.py  doc_analyst.py  report_writer.py  web_researcher.py
src/api/: main.py  rate_limit.py
src/api/routes/: __init__.py  ingest.py  research.py
src/config/: settings.py
src/graph/: __init__.py  graph.py  nodes.py  state.py  streaming.py  trace_context.py
src/mcp/: __init__.py  tavily_server.py
src/models/: __init__.py  schemas.py
src/rag/: __init__.py  hybrid_search.py  index_store.py  ingestion.py  reranker.py
src/tools/: __init__.py  rag_tools.py  scraper_tools.py  search_tools.py
src/utils/: __init__.py  report_export.py  token_cost.py  tracing.py
tests/: conftest.py  test_agents.py  test_api_research.py  test_coordinator.py  test_graph.py  test_rag.py  test_rate_limit.py  test_report_export.py  test_scraper_tools.py  test_search_tools.py  test_streaming_events.py  test_token_cost.py  test_tracing.py
ui/: app.py  trace_renderer.py
